2006-06-06  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (paint_menuitem), (paint_shadow),
	(paint_progress_bar), (draw_box):
	* themes/Crux/gtk-2.0/gtkrc:

	- Implement new style menu items
	- Bug fixes to paint_shadow and draw_box
	- Fix draw issues in paint_progress_bar

2006-06-01  Thomas Wood  <thos@gnome.org>

	* engines/industrial/src/industrial_style.c: (real_draw_box):
	Applied patch from Bug 341694 - Crash in d4x

2006-05-29  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (crux_begin_paint),
	(crux_paint_gradient), (paint_button), (paint_shadow),
	(paint_entry_shadow), (paint_progress_bar),
	(paint_menuitem_shadow), (draw_shadow), (draw_box), (draw_check),
	(draw_tab), (draw_focus), (draw_slider), (draw_handle):
	Begin implementing the tango-style Crux from Lapo Calamandrei's mockup.

	* engines/support/cairo-support.c: (ge_saturate_color),
	(ge_cairo_rounded_rectangle):
	* engines/support/cairo-support.h:
	Added rounded rectangle and saturate functions

	* themes/Crux/gtk-2.0/gtkrc: Tweaks for the new tango-style Crux

2006-05-21  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_gripdots), (clearlooks_draw_slider),
	(clearlooks_draw_slider_button):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters):
	* engines/clearlooks/src/clearlooks_types.h:
	* engines/clearlooks/src/support.c: (cl_get_parent_direction):
	* engines/clearlooks/src/support.h:

	Updated the GtkScale.
	First steps to RTL support.

2006-05-21  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_progressbar_fill):
	* engines/clearlooks/src/clearlooks_style.c: (draw_box):
	* engines/clearlooks/src/clearlooks_types.h:

	Pulsing progressbars look better now.
	100% progressbars don't draw end line.

2006-05-21  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c: